# lms

./: .gitattributes  .gitignore  .gitignore~  .htaccess  .jshintignore  .jshintrc  .project  .travis.yml  Plik testowy  README.md  README.zh.md  SECURITY.md  build.xml  composer.json  index.php  lms-new-hooks.patch  lms.patch  phpcs.xml  phpcs2.xml  phpcs3.xml  phpunit.xml  prev_period.diff  robots.txt
ai_usage_screenshots/: modification_log.md
config_templates/: dhcpd.conf.tpl  ethernet.desc.tpl  ethers.tpl  oidentd_masq.conf.tpl
contrib/: ADOdb.spec  Smarty.spec  bandlogger  bandlogger+htblimiter  initLMS.php  lms-PLD.patch  lms-export-invoices.sh  lms.ini-PLD.patch  lms.spec  lms_contract.patch  lms_contract.patch.txt  nodes-filename.diff  nodes-filename.txt
css/: fontawesome  lms-variables.css  lms-variables.less  map.css  map.less  style.css  style.less  style_print.css  style_print.less
daemon/: .gitignore  Changelog  LICENSE  Makefile  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  almsd.c  almsd.h  config.h.in  configure  configure.ac  db.c  db.h  defs.h  lms.ini.sample  lmsd.c  lmsd.h  mysql.h  pgsql.h  sqlite_.h  util.c  util.h
daemon/config/: config.c  config.h  dictionary.c  dictionary.h
daemon/cron/: cron.c  cron.h  cronparse.c  cronparse.h
daemon/dbdrivers/: Makefile.am  Makefile.in
daemon/dbdrivers/mysql/: Makefile.am  Makefile.in  db.c  db.h  mysql.c  mysql.h
daemon/dbdrivers/pgsql/: Makefile.am  Makefile.in  db.c  db.h  pgsql.c  pgsql.h
daemon/dbdrivers/postgres/: Makefile.am  Makefile.in  postges.h  postgres.c  postgres.h
daemon/dbdrivers/sqlite/: db.c  db.h
daemon/iniparser/: Makefile  iniparser.c  strlib.c  strlib.h
daemon/modules/: Makefile  Makefile.am  Makefile.in
daemon/modules/cutoff/: Makefile.am  Makefile.in  README  cutoff.c  cutoff.h  cutoff2.c  cutoff2.h
daemon/modules/dhcp/: Makefile  Makefile.am  Makefile.in  dhcp.c  dhcp.h
daemon/modules/dns/: Makefile.am  Makefile.in  dns.c  dns.h
daemon/modules/dns/sample/: named.conf
daemon/modules/dns/sample/forward/: generic
daemon/modules/dns/sample/reverse/: generic
daemon/modules/ethers/: Makefile  Makefile.am  Makefile.in  ethers.c  ethers.h
daemon/modules/ewx-pt/: Makefile.am  Makefile.in  ewx-pt.c  ewx-pt.h
daemon/modules/ewx-stm/: Makefile.am  Makefile.in  ewx-stm.c  ewx-stm.h
daemon/modules/ewx-stm-channels/: Makefile.am  Makefile.in  ewx-stm-channels.c  ewx-stm-channels.h
daemon/modules/ggnotify/: Makefile  Makefile.am  Makefile.in  ReadMe  ggnotify.c  ggnotify.h
daemon/modules/ggnotify/sample/: lms-ggnotify.ini
daemon/modules/hostfile/: Makefile  Makefile.am  Makefile.in  hostfile.c  hostfile.h
daemon/modules/notify/: Makefile.am  Makefile.in  notify.c  notify.h
daemon/modules/notify/sample/: mailtemplate
daemon/modules/oident/: Makefile.am  Makefile.in  oident.c  oident.h
daemon/modules/parser/: Makefile.am  Makefile.in  parser.c  parser.h
daemon/modules/parser/extensions/: Makefile.am  Makefile.in  consts.c  consts.h  exec.c  exec.h  net.c  net.h  sql.c  sql.h  syslog.c  syslog.h  time.c  time.h  tscript_exec.c  tscript_exec.h  tscript_file.c  tscript_file.h  tscript_string.c  tscript_string.h  tscript_sysinfo.c  tscript_sysinfo.h
daemon/modules/parser/lib/: Makefile  Makefile.am  Makefile.in  TODO  ast.c  ast.h  debug.c  debug.h  extensions.c  extensions.h  interpreter.c  interpreter.h  lexical.yy  list.h  map.h  parser.y  tscript_ast.c  tscript_ast.h  tscript_compiler.c  tscript_compiler.h  tscript_context.c  tscript_context.h  tscript_debug.c  tscript_debug.h  tscript_extensions.c  tscript_extensions.h  tscript_extensions_private.h  tscript_interpreter.c  tscript_interpreter.h  tscript_lexical.yy  tscript_parser.y  tscript_values.c  tscript_values.h  tscript_variables.c  tscript_variables.h  tscript_variables_private.h  values.c  values.h  variables.c  variables.h
daemon/modules/payments/: Makefile.am  Makefile.in  payments.c  payments.h
daemon/modules/pinger/: Makefile.am  Makefile.in  pinger.c  pinger.h
daemon/modules/system/: Makefile.am  Makefile.in  system.c  system.h
daemon/modules/tc/: Makefile.am  Makefile.in  tc.c  tc.h
daemon/modules/tc-new/: Makefile.am  Makefile.in  tc-new.c  tc-new.h
daemon/modules/tc-ng/: Makefile.in  tc-ng.c  tc-ng.h
daemon/modules/tc/sample/: htb.sh
daemon/modules/traffic/: Makefile.am  Makefile.in  traffic.c  traffic.h
debian/: README.Debian  changelog  control  copyright  lms-common.config  lms-common.dirs  lms-common.install  lms-common.postinst  lms-common.postrm  lms-common.prerm  lms-daemon-mysql.install  lms-daemon-pgsql.install  lms-daemon.init.d  lms-daemon.install  lms-tools.install  lms-ui-mysql.install  lms-ui-pgsql.install  lms-ui-pgsql.postinst  lms-ui-pgsql.templates  lms-ui.cron.d  lms-ui.dirs  lms-ui.install  lms-ui.links  lms-ui.postinst  lms-ui.postrm  lms-ui.prerm  rules
devel/: buildpack.sh  configuration-variables.php  cvs.sh  dbinfo_version_bump.sh  docgen-pl.sh  docgen.sh  dokumenty  ethercodes.sh  full-db-schema-check.mysql  full-db-schema-check.pgsql  full-db-schema-check.sh  gameplan  index-with-execstack.php  jquery.sh  lesscpy.sh  lms-modules-test.sh  make.po.file.sh  navgoco.sh  psucie-bazy  refactor_php_variadic_functions.php  refactor_smarty_assign_using_array.php  runme.sh  show_sql_recursive_tables.sh  show_sql_tables.sh  smarty-3.1.27.patch  smarty-3.1.29.patch  smarty_install.sh  smartylint.php  strings-js.sh  strings.pl  strings.sh  strings_validate.awk  stringsback.pl  test-full.sh  test-incremental.sh  twitter_bootstrap.sh  upgradedb-template.php  upgradedb.php
doc/: 00-Index.txt  AUTHORS  COPYING  COPYRIGHTS  ChangeLog  ChangeLog.en  INSTALL  INSTALL.mysql  INSTALL.pgsql  README  README.Debian  README.html  README.pl  README_lms-sidusis.md  README_lms-sidusis.txt  TODO  UPGRADE-1.0-1.3.mysql  UPGRADE-1.0-1.3.pgsql  UPGRADE-1.0-1.4.mysql  UPGRADE-1.0-1.4.pgsql  UPGRADE-1.0-1.5.mysql  UPGRADE-1.0-1.5.pgsql  UPGRADE-1.2-1.3.mysql  UPGRADE-1.2-1.3.pgsql  UPGRADE-1.2-1.4.mysql  UPGRADE-1.2-1.4.pgsql  UPGRADE-1.2-1.5.mysql  (+21 more)
(+5027 files in other folders)
